<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/splash_bg"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grdient_shape"/>
    <include
        android:id="@+id/include"
        android:layout_marginTop="40dp"
        layout="@layout/part_logo_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:layout_below="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="@dimen/m_30"
        android:layout_marginRight="@dimen/m_30"
        android:paddingBottom="@dimen/margin_xxlarge">

        <LinearLayout
            android:id="@+id/ll_enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_corner_white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:background="@drawable/ic_email"
                    android:padding="@dimen/margin_min"
                    android:scaleType="centerInside" />

                <EditText
                    android:id="@+id/et_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="@null"
                    android:hint="@string/pass_forgot_text"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="@color/settings_divider"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <TextView
                android:id="@+id/btn_send_email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/blue_backgorund_corner"
                android:gravity="center"
                android:text="@string/pass_button_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_reset_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/background_corner_white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_user_otp"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="@null"
                    android:hint="@string/pass_otp_text"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/settings_divider"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/background_corner_white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_user_pass1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="@null"
                    android:hint="@string/pass_enter1_text"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/settings_divider"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/background_corner_white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_user_pass2"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="@null"
                    android:hint="@string/pass_enter2_text"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/settings_divider"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <TextView
                android:id="@+id/btn_reset_pass"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:background="@drawable/blue_backgorund_corner"
                android:text="@string/pass_reset_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
